# CryptoVibes

./: .bruin.example.yml  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  data.py  main.py  requirements.txt
app/.streamlit/: config.toml
app/components/: comparison_chart.py  kpi_cards.py  price_chart.py  sentiment_chart.py  sidebar.py
infra/: main.tf
notebooks/: criptogecko.ipynb  fear_and_greed.ipynb
pipeline/: pipeline.yml
pipeline/assets/ingestion/: ingest_index.py  ingest_prices.py  requirements.txt
pipeline/assets/mart/: mart_crypto_vs_sentiment.sql
pipeline/assets/staging/: stg_fear_greed.sql  stg_prices.sql
scripts/: json_to_toml.py
